[fix] changed z-index to lower value

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99999999;
+  z-index: 6;
 
   background-color: rgba(0, 0, 0, 0.8);
 }
