--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -35,7 +35,7 @@
 .fixed {
   position: sticky;
   top: 0;
-  z-index: 999999;
+  z-index: 6;
 }
 
 .flex-1 {
